--- a/renderer/renderer.vcxproj.filters
+++ b/renderer/renderer.vcxproj.filters
@@ -130,6 +130,9 @@
     <Filter Include="Source\3rdParty\fmt\src">
       <UniqueIdentifier>{1eaf0b72-15a9-457f-8e13-9ed404f7ea35}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source\Algorithm">
+      <UniqueIdentifier>{1306f086-ce48-4bd5-9888-35fe856e37cc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="3rdparty\assimp\color4.inl">
@@ -375,9 +378,6 @@
     <ClCompile Include="Render\Material.cpp">
       <Filter>Source\Render</Filter>
     </ClCompile>
-    <ClCompile Include="Render\PbrRenderer.cpp">
-      <Filter>Source\Render</Filter>
-    </ClCompile>
     <ClCompile Include="Render\PostProcess.cpp">
       <Filter>Source\Render</Filter>
     </ClCompile>
@@ -593,6 +593,12 @@
     </ClCompile>
     <ClCompile Include="3rdParty\fmt\src\format.cc">
       <Filter>Source\3rdParty\fmt\src</Filter>
+    </ClCompile>
+    <ClCompile Include="Render\DeferredRenderer.cpp">
+      <Filter>Source\Render</Filter>
+    </ClCompile>
+    <ClCompile Include="Render\ForwardRenderer.cpp">
+      <Filter>Source\Render</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1127,9 +1133,6 @@
     <ClInclude Include="Render\Material.h">
       <Filter>Source\Render</Filter>
     </ClInclude>
-    <ClInclude Include="Render\PbrRenderer.h">
-      <Filter>Source\Render</Filter>
-    </ClInclude>
     <ClInclude Include="Render\PostProcess.h">
       <Filter>Source\Render</Filter>
     </ClInclude>
@@ -1439,6 +1442,15 @@
     <ClInclude Include="3rdParty\fmt\include\fmt\xchar.h">
       <Filter>Source\3rdParty\fmt\include</Filter>
     </ClInclude>
+    <ClInclude Include="Algorithm\Bvh.h">
+      <Filter>Source\Algorithm</Filter>
+    </ClInclude>
+    <ClInclude Include="Render\DeferredRenderer.h">
+      <Filter>Source\Render</Filter>
+    </ClInclude>
+    <ClInclude Include="Render\ForwardRenderer.h">
+      <Filter>Source\Render</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="assets\shader\BlinnPhong.hlsl">
@@ -1459,9 +1471,6 @@
     <FxCompile Include="assets\shader\BlurOutline.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
-    <FxCompile Include="assets\shader\Pbr.hlsl">
-      <Filter>Shader</Filter>
-    </FxCompile>
     <FxCompile Include="assets\shader\ToneMapping.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
@@ -1477,22 +1486,19 @@
     <FxCompile Include="assets\shader\PostProcessCommon.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
-    <FxCompile Include="Assets\Shader\TexPS.hlsl">
-      <Filter>Shader</Filter>
-    </FxCompile>
-    <FxCompile Include="Assets\Shader\TexUnlitPS.hlsl">
-      <Filter>Shader</Filter>
-    </FxCompile>
-    <FxCompile Include="Assets\Shader\TexVS.hlsl">
-      <Filter>Shader</Filter>
-    </FxCompile>
-    <FxCompile Include="Assets\Shader\Cube.hlsl">
-      <Filter>Shader</Filter>
-    </FxCompile>
     <FxCompile Include="Assets\Shader\MSAAResolve.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
     <FxCompile Include="Assets\Shader\GenerateMipsCS.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="Assets\Shader\DeferredLighting.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="Assets\Shader\ForwardLighting.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="Assets\Shader\GBufferPass.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
   </ItemGroup>
