--- a/renderer/renderer.vcxproj.filters
+++ b/renderer/renderer.vcxproj.filters
@@ -165,9 +165,6 @@
     <None Include="assets\shader\common\Lighting.hlsli">
       <Filter>Shader\Common</Filter>
     </None>
-    <None Include="assets\shader\common\Transform.hlsli">
-      <Filter>Shader\Common</Filter>
-    </None>
     <None Include="assets\shader\common\Shadow.hlsli">
       <Filter>Shader\Common</Filter>
     </None>
@@ -185,6 +182,15 @@
       <Filter>Shader\Common</Filter>
     </None>
     <None Include="Assets\Shader\Common\BasicTexture.hlsli">
+      <Filter>Shader\Common</Filter>
+    </None>
+    <None Include="Assets\Shader\Common\BasicBuffer.hlsli">
+      <Filter>Shader\Common</Filter>
+    </None>
+    <None Include="Assets\Shader\Common\Colors.hlsli">
+      <Filter>Shader\Common</Filter>
+    </None>
+    <None Include="Assets\Shader\Common\Utils.hlsli">
       <Filter>Shader\Common</Filter>
     </None>
   </ItemGroup>
@@ -1520,6 +1526,9 @@
       <Filter>Shader</Filter>
     </FxCompile>
     <FxCompile Include="Assets\Shader\FXAA.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="Assets\Shader\TAA.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
   </ItemGroup>
